# HotelManagementSystem

./: .gitignore  CMakeLists.txt  README.md  requirements.md
config/: hotel_config.xml
gui/: apple_style.h  main.cpp  main_window.cpp  main_window.h  room_card.cpp  room_card.h
include/: big_bed_room.h  cli.h  config_loader.h  database_manager.h  hotel.h  luxury_room.h  room.h  standard_room.h
src/: big_bed_room.cpp  cli.cpp  config_loader.cpp  database_manager.cpp  hotel.cpp  luxury_room.cpp  main.cpp  room.cpp  standard_room.cpp
